chore: ensure scrollbar appears above sticky pagination

--- a/polaris-react/src/components/IndexTable/IndexTable.scss
+++ b/polaris-react/src/components/IndexTable/IndexTable.scss
@@ -1398,6 +1398,15 @@ $scroll-bar-size: var(--p-space-200);
   }
 }
 
+.ScrollBarContainerWithPagination {
+  bottom: 40px;
+
+  @media #{$p-breakpoints-sm-up} {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+}
+
 .scrollBarContainerCondensed {
   visibility: hidden;
   pointer-events: none;
